--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,24 @@
 server:
   port: 8081
 
-spring:
-  security:
-    oauth2:
-      client:
-        registration:
-          keycloak:
-            client-id: oauth2-client-app
-            client-secret: PJrMtfY8Yv1SWyKCGgBXtFFzRvh1pTHU
-            client-name: oauth2-client-chocola
-            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
-            authorization-grant-type: authorization_code
-            client-authentication-method: client_secret_basic
-            scope: openid, email
-        provider:
-          keycloak:
-            authorization-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/auth
-            token-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/token
-            user-info-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/userinfo
-            user-name-attribute: preferred_username
-            jwk-set-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/certs
-            issuer-uri: http://localhost:8080/realms/OAuth2
+#spring:
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          keycloak:
+#            client-id: oauth2-client-app
+#            client-secret: PJrMtfY8Yv1SWyKCGgBXtFFzRvh1pTHU
+#            client-name: oauth2-client-chocola
+#            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
+#            authorization-grant-type: authorization_code
+#            client-authentication-method: client_secret_basic
+#            scope: openid, email
+#        provider:
+#          keycloak:
+#            authorization-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/auth
+#            token-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/token
+#            user-info-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/userinfo
+#            user-name-attribute: preferred_username
+#            jwk-set-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/certs
+#            issuer-uri: http://localhost:8080/realms/OAuth2
