--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,20 @@ spring:
             client-id: oauth2-client-app
             client-secret: PJrMtfY8Yv1SWyKCGgBXtFFzRvh1pTHU
             client-name: oauth2-client-chocola
-            redirect-uri: http://localhost:8081/login/v1/oauth2/code/keycloak
+            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_basic
             scope: openid, email
+            provider: keycloak
+          keycloakWithPKCE:
+            client-id: oauth2-client-app2
+            client-secret: 4th9rXlDS5xRh1VvRLbxKkbXH2Uxgeap
+            client-name: oauth2-client-chocola2
+            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
+            authorization-grant-type: authorization_code
+            client-authentication-method: none
+            scope: openid, email
+            provider: keycloak
         provider:
           keycloak:
             authorization-uri: http://localhost:8080/realms/OAuth2/protocol/openid-connect/auth
