[Section 8] OAuth 2.0 Client oauth2Login() - API 커스텀 구현 - OAuth2AuthorizationRequestResolver(2)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
             client-name: oauth2-client-chocola2
             redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
             authorization-grant-type: authorization_code
-            client-authentication-method: none
+            client-authentication-method: client_secret_post
             scope: openid, email
             provider: keycloak
         provider:
